[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>", "Jake Heinz <jake@discord.com>"]
description = "A client library for CoreOS's etcd."
documentation = "https://docs.rs/etcd"
edition = "2018"
homepage = "https://github.com/discord/rust-etcd"
keywords = ["etcd", "coreos", "database"]
license = "MIT"
name = "etcd"
readme = "README.md"
repository = "https://github.com/discord/rust-etcd"
version = "0.10.0"

[lib]
test = false

[dependencies]
bytes = "1.0"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.2"
base64 = "0.13.0"
log = "0.4.6"
tokio = "1"
reqwest = { version = "0.11", default_features = false }
rand = "0.8"

[features]
default = ["tls"]
tls = ["reqwest/native-tls"]

[dev-dependencies]
tokio = { version = "1.4", features = ["rt-multi-thread"] }
